--- a/demos/inview.html
+++ b/demos/inview.html
@@ -76,36 +76,41 @@
 </head>
 <body class="n-demo">
 
-<div id="app">
-    <div class="app-container">
-        <div style="background: yellow; width: 100%; height: 80vh;" data-inview="yellow"></div>
-        <div style="background: red; width: 100%; height: 200vh;" data-inview="red"></div>
-        <div style="background: orange; width: 100%; height: 100px;" data-inview="orange"></div>
-        <div style="background: blue; width: 100%; height: 400px;" data-inview="blue"></div>
-        <div style="background: green; width: 100%; height: 80vh;" data-inview="green"></div>
+<div id="app" style="margin: 20vh auto;">
+    <div data-boundry style="height: 60vh; overflow: auto;">
+        <div class="app-container">
+            <div style="background: yellow; width: 100%; height: 80vh;" data-inview="yellow"></div>
+            <div style="background: red; width: 100%; height: 200vh;" data-inview="red"></div>
+            <div style="background: orange; width: 100%; height: 200px;" data-inview="orange"></div>
+            <div style="background: purple; width: 100%; height: 200px;" data-inview="purple"></div>
+            <div style="background: cyan; width: 100%; height: 200px;" data-inview="cyan"></div>
+            <div style="background: blue; width: 100%; height: 400px;" data-inview="blue"></div>
+            <div style="background: green; width: 100%; height: 80vh;" data-inview="green"></div>
+        </div>
     </div>
+
 </div>
 
 <script>
     pi.Dom.ready(() => {
-        pi.Dom.find(window).on('scroll', () => {
+        pi.Dom.find('[data-boundry]').on('scroll', () => {
 
             pi.Dom.find('[data-inview]').each((el) => {
                 pi.Dom.find(el).removeClass('is-there');
             });
 
             let options = {
-                el: '[data-inview]'
+                el: '[data-inview]', parent: '[data-boundry]'
             }
 
             let first = pi.Dom.inviewMaxY(options, (el) => {
                 pi.Dom.find(el.el).addClass('is-there');
             });
 
-            console.log(first);
+            console.log(first && first.getAttribute('data-inview'));
         });
 
-    })
+    });
 </script>
 
 </body>
