--- a/browsercheck.html
+++ b/browsercheck.html
@@ -64,7 +64,9 @@
 </div>
 <script>
 
-    // const pix = window.pi;
+    if ( ! window.pix ) {
+        window.pix = window.pi;
+    }
 
     // console.log(pix);
 
